book/tests/snapshots/snapshot__run_reference_prql@misc-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/examples/misc-1.prql
---
WITH table_0 AS (
  SELECT
    *,
    rating
  FROM
    club_ratings
  WHERE
    rating IS NOT NULL
)
SELECT
  *,
  rating - AVG(rating) OVER (PARTITION BY year) / STDDEV(rating) OVER (PARTITION BY year) AS rating_norm
FROM
  table_0
