book/tests/snapshots/snapshot__run_reference_prql@name-resolving-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/semantics/name-resolving-0.prql
---
SELECT
  first_name
FROM
  employees
