book/tests/snapshots/snapshot__run_reference_prql@name-resolving-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/semantics/name-resolving-1.prql
---
SELECT
  employees.first_name,
  d.title,
  created_at
FROM
  employees
  JOIN departments AS d USING(dept_id)
