book/tests/snapshots/snapshot__run_reference_prql@pipelines-0.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/pipelines-0.prql
---
SELECT
  *
FROM
  employees
