book/tests/snapshots/snapshot__run_reference_prql@pipelines-1.prql.snap
---
source: book/tests/snapshot.rs
expression: sql
input_file: book/tests/prql/queries/pipelines-1.prql
---
SELECT
  *,
  salary + payroll_tax AS gross_salary
FROM
  employees
